# ancast

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  runExperiment.sh  setup.py
ancast/: __init__.py  __main__.py  closure.py  document.py  evaluate.py  io_utils.py  matches.py  metric.py  node.py  ops.py  params.py  resource_utils.py  sentence.py  word.py
ancast/resources/: __init__.py  abstract_vocab.json  reification_relations.json
demo/: ancast++.ipynb  ancast.ipynb
samples/: amr.csv  amr_gold.txt  amr_test.txt  umr.csv  umr_gold.txt  umr_test.txt
src/: closure.py  document.py  matches.py  metric.py  node.py  param.py  param_fun.py  run.py  sentence.py  word.py
src/utils/: abstract_vocab.txt  draw_map.py  reification_relations.txt
