[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ancast"
version = '0.1.1'
authors = [
  { name="Haibo Sun", email="hsun@brandeis.edu" },
  { name="Jayeol Chun", email="jchun@brandeis.edu" },
]
description = "AnCast++ metric for evaluating UMR semantic graphs"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/umr4nlp/ancast"

[project.scripts]
ancast = "ancast.__main__:main"
